# vanjaro-cli

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: plan-phase5-verify.md  plan-reusable-block-system.md  plan-site-migration.md  vanjaro-cli-spec.md
skills/: SKILL.md  assets.md  auth.md  blocks.md  build-page.md  content.md  design.md  pages.md  site.md  theme-apply.md  theme-control-reference.md  theme-extract-tokens.md  theme.md
tests/: CLAUDE.md  conftest.py  test_api_key.py  test_assets.py  test_auth.py  test_block_compose.py  test_block_templates.py  test_blocks.py  test_branding.py  test_build.py  test_build_library.py  test_client.py  test_config.py  test_content.py  test_content_walk.py  test_custom_blocks.py  test_global_blocks.py  test_grapesjs.py  test_migrate_assemble_cmd.py  test_migrate_build_global_cmd.py  test_migrate_build_id_map_cmd.py  test_migrate_compose_global_cmd.py  test_migrate_crawl_cmd.py  test_migrate_create_pages_cmd.py  test_migrate_rewrite_cmd.py  test_migrate_verify_cmd.py  test_migration_crawler.py  test_migration_global_blocks.py  test_migration_sections.py  test_migration_tokens.py  test_modules.py  test_pages.py  test_profile.py  test_scaffold.py  test_site.py  test_templates.py  test_theme.py  test_verify.py
vanjaro_cli/: CLAUDE.md  auth.py  cli.py  client.py  config.py
vanjaro_cli/commands/: CLAUDE.md  __init__.py  api_key_cmd.py  assets_cmd.py  auth_cmd.py  block_build_library_cmd.py  block_compose_cmd.py  block_templates_cmd.py  blocks_cmd.py  branding_cmd.py  (+20 more)
(+53 files in other folders)
